--- a/src/Components/Burger/Burger.css
+++ b/src/Components/Burger/Burger.css
@@ -33,7 +33,7 @@
      position: absolute;
      width: 100%;
      height: 3px;
-     background-color: black;
+     background-color: white;
      margin-top: 3px;
      transition: all 0.5s ease-out;
      z-index: 20;
