--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -27,10 +27,10 @@
 }
 .header__link-home {
   display: block;
-  width: 121px;
+  width: 221px;
   background-position: center;
-  height: 50px;
-  background-image: url("../../../public/logo.jpg");
+  height: 100px;
+  background-image: url("../../../public/logo4.png");
   transition: opacity .3s linear;
   background-size: contain;
   background-repeat: no-repeat;
