--- a/src/Components/Offer/Offer.css
+++ b/src/Components/Offer/Offer.css
@@ -48,10 +48,24 @@
 
 .offer__price-item {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 500px;
+    width: 100%;
+}
+.offer__price-item_other {
+    display: flex;
+    align-items: flex-start;
+    max-width: 500px;
+    width: 100%;
+}
+.offer__price-item_list {
+    display: flex;
     justify-content: space-between;
     align-items: flex-start;
     gap: 50px;
     max-width: 500px;
+    width: 100%;
 }
 .offer__time {
     max-width: 300px;
@@ -105,6 +119,20 @@
         justify-content: center;
         gap: 30px;
         align-items: center;
+    }
+    .offer__prices {
+     width: 100%;
+    }
+    .offer__price-item { 
+max-width: 700px;
+width: 100%;
+    }
+    .offer__price-item_list {
+        max-width: 700px;
+width: 100%;
+    }
+    .offer__text {
+        text-align: center;
     }
 
 }
