--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,5 +1,5 @@
 .page__content {
-  max-width: 1340px;
+  max-width: 1640px;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -12,7 +12,7 @@
 }
 
 .content {
-  max-width: 1240px;
+  max-width: 1640px;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -23,7 +23,10 @@
   overflow: hidden;
 
 }
-
+.width__size {
+  max-width: 1640px;
+  width: 100%;
+}
 .page__size {
   padding: 50px;
   width: 100%;
