--- a/src/Components/Offfers/Offers.css
+++ b/src/Components/Offfers/Offers.css
@@ -1,7 +1,13 @@
 .offers {
     width: 100%;
-    position: relative;
 }
+.offers__container {
+    max-width: 1640px;
+    width: 100%;
+    margin: 0 auto; /* Центрирование контейнера */
+    padding: 0; /* Убедитесь, что padding не уменьшает ширину */
+    box-sizing: border-box; /* Учитываем padding и border в ширине */
+  }
 .offers__title {
     font-size: 34px;
     background-color: var(--back-Offers-color);
@@ -31,7 +37,7 @@ transition: opacity 1.9s ease-in-out, transform 3.9s ease-in-out;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 50px;
     transition: transform 1.9s ease-in-out, opacity 1.2s ease-in-out;
     opacity: 1; /* Убираем начальную прозрачность */
