--- a/src/Components/Present/Present.css
+++ b/src/Components/Present/Present.css
@@ -19,6 +19,7 @@ transition: opacity 1.9s ease-in-out, transform 3.9s ease-in-out;
 .present__block-imgs {
     display: flex;
     width: 100%;
+    justify-content: center;
 }
 .present__block-text {
     display: flex;
@@ -27,7 +28,7 @@ transition: opacity 1.9s ease-in-out, transform 3.9s ease-in-out;
     align-items: flex-start;
 }
 .prsent__img {
-max-width: 620px;
+max-width: 820px;
 width: 100%;
 height: 450px;
 object-fit: cover;
