--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html, body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden; /* Убедитесь, что горизонтальный скролл не обрезает контент */
+}
